--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
   <script src="bower_components/angular-aria/angular-aria.js"></script>
   <script type="text/javascript" src="bower_components/angular-material/angular-material.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/categoriesController.js"></script>
 </head>
 <body>
 
