unit tests and template changes

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="bower_components/angular-material/angular-material.js"></script>
   <script src="js/app.js"></script>
   <script src="js/categoriesController.js"></script>
+  <script src="js/services.js"></script>
 </head>
 <body>
 
@@ -31,7 +32,7 @@
       </md-content>
     </div>
   
-<div ng-view class="view-frame"></div>
+  <div ng-view class="view-frame"></div>
   
   </div>
 
